// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update command can generate update spec files for component schemas by example 1`] = `
Array [
  "{
  \\"openapi\\": \\"3.0.0\\",
  \\"info\\": {
    \\"title\\": \\"Simple API overview\\",
    \\"version\\": \\"2.0.0\\"
  },
  \\"paths\\": {},
  \\"components\\": {
    \\"schemas\\": {
      \\"ObjectSchema\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"version\\": {
            \\"type\\": \\"object\\",
            \\"properties\\": {
              \\"status\\": {
                \\"type\\": \\"string\\"
              },
              \\"updated\\": {
                \\"type\\": \\"string\\"
              },
              \\"media-types\\": {
                \\"type\\": \\"array\\",
                \\"items\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"base\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"type\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"base\\",
                    \\"type\\"
                  ]
                }
              },
              \\"id\\": {
                \\"type\\": \\"string\\"
              },
              \\"links\\": {
                \\"type\\": \\"array\\",
                \\"items\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"href\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"rel\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"type\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"href\\",
                    \\"rel\\"
                  ]
                }
              }
            },
            \\"required\\": [
              \\"status\\",
              \\"updated\\",
              \\"media-types\\",
              \\"id\\",
              \\"links\\"
            ]
          }
        },
        \\"example\\": {
          \\"version\\": {
            \\"status\\": \\"CURRENT\\",
            \\"updated\\": \\"2011-01-21T11:33:21Z\\",
            \\"media-types\\": [
              {
                \\"base\\": \\"application/xml\\",
                \\"type\\": \\"application/vnd.openstack.compute+xml;version=2\\"
              },
              {
                \\"base\\": \\"application/json\\",
                \\"type\\": \\"application/vnd.openstack.compute+json;version=2\\"
              }
            ],
            \\"id\\": \\"v2.0\\",
            \\"links\\": [
              {
                \\"href\\": \\"http://127.0.0.1:8774/v2/\\",
                \\"rel\\": \\"self\\"
              },
              {
                \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/os-compute-devguide-2.pdf\\",
                \\"type\\": \\"application/pdf\\",
                \\"rel\\": \\"describedby\\"
              },
              {
                \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                \\"rel\\": \\"describedby\\"
              },
              {
                \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                \\"rel\\": \\"describedby\\"
              }
            ]
          }
        },
        \\"required\\": [
          \\"version\\"
        ]
      },
      \\"UntypedSchema\\": {
        \\"example\\": {
          \\"version\\": {
            \\"status\\": \\"CURRENT\\",
            \\"updated\\": \\"2011-01-21T11:33:21Z\\",
            \\"media-types\\": [
              {
                \\"base\\": \\"application/xml\\",
                \\"type\\": \\"application/vnd.openstack.compute+xml;version=2\\"
              },
              {
                \\"base\\": \\"application/json\\",
                \\"type\\": \\"application/vnd.openstack.compute+json;version=2\\"
              }
            ],
            \\"id\\": \\"v2.0\\",
            \\"links\\": [
              {
                \\"href\\": \\"http://127.0.0.1:8774/v2/\\",
                \\"rel\\": \\"self\\"
              },
              {
                \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/os-compute-devguide-2.pdf\\",
                \\"type\\": \\"application/pdf\\",
                \\"rel\\": \\"describedby\\"
              },
              {
                \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                \\"rel\\": \\"describedby\\"
              },
              {
                \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                \\"rel\\": \\"describedby\\"
              }
            ]
          }
        }
      },
      \\"MistypedSchema\\": {
        \\"example\\": 31,
        \\"type\\": \\"number\\"
      }
    }
  }
}",
]
`;

exports[`update command can generate update spec files for component schemas by example 2`] = `
Object {
  "examplesCount": 3,
  "externalExamplesCount": 0,
  "filesWithOverwrittenYamlComments": Set {},
  "patchesCount": 23,
  "updatedFilesCount": 1,
}
`;

exports[`update command can generate update spec files for request / response examples with partial schemas 1`] = `
Array [
  "{
  \\"openapi\\": \\"3.0.0\\",
  \\"info\\": {
    \\"title\\": \\"Simple API overview\\",
    \\"version\\": \\"2.0.0\\"
  },
  \\"paths\\": {
    \\"/\\": {
      \\"get\\": {
        \\"operationId\\": \\"listVersionsv2\\",
        \\"summary\\": \\"List API versions\\",
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"versions\\": {
                      \\"type\\": \\"array\\",
                      \\"items\\": {
                        \\"type\\": \\"object\\",
                        \\"properties\\": {
                          \\"status\\": {
                            \\"type\\": \\"string\\"
                          },
                          \\"updated\\": {
                            \\"type\\": \\"string\\"
                          },
                          \\"id\\": {
                            \\"type\\": \\"string\\"
                          },
                          \\"links\\": {
                            \\"type\\": \\"array\\",
                            \\"items\\": {
                              \\"type\\": \\"object\\",
                              \\"properties\\": {
                                \\"href\\": {
                                  \\"type\\": \\"string\\"
                                },
                                \\"rel\\": {
                                  \\"type\\": \\"string\\"
                                }
                              },
                              \\"required\\": [
                                \\"href\\",
                                \\"rel\\"
                              ]
                            }
                          }
                        },
                        \\"required\\": [
                          \\"status\\",
                          \\"updated\\",
                          \\"id\\",
                          \\"links\\"
                        ]
                      }
                    }
                  },
                  \\"required\\": [
                    \\"versions\\"
                  ]
                },
                \\"examples\\": {
                  \\"foo\\": {
                    \\"value\\": {
                      \\"versions\\": [
                        {
                          \\"status\\": \\"CURRENT\\",
                          \\"updated\\": \\"2011-01-21T11:33:21Z\\",
                          \\"id\\": \\"v2.0\\",
                          \\"links\\": [
                            {
                              \\"href\\": \\"http://127.0.0.1:8774/v2/\\",
                              \\"rel\\": \\"self\\"
                            }
                          ]
                        },
                        {
                          \\"status\\": \\"EXPERIMENTAL\\",
                          \\"updated\\": \\"2013-07-23T11:33:21Z\\",
                          \\"id\\": \\"v3.0\\",
                          \\"links\\": [
                            {
                              \\"href\\": \\"http://127.0.0.1:8774/v3/\\",
                              \\"rel\\": \\"self\\"
                            }
                          ]
                        }
                      ]
                    }
                  }
                }
              }
            }
          },
          \\"300\\": {
            \\"description\\": \\"300 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"oneOf\\": [
                    {
                      \\"type\\": \\"object\\",
                      \\"properties\\": {}
                    },
                    {
                      \\"type\\": \\"string\\"
                    }
                  ]
                },
                \\"examples\\": {
                  \\"foo\\": {
                    \\"value\\": \\"{\\\\n \\\\\\"versions\\\\\\": [\\\\n       {\\\\n         \\\\\\"status\\\\\\": \\\\\\"CURRENT\\\\\\",\\\\n         \\\\\\"updated\\\\\\": \\\\\\"2011-01-21T11:33:21Z\\\\\\",\\\\n         \\\\\\"id\\\\\\": \\\\\\"v2.0\\\\\\",\\\\n         \\\\\\"links\\\\\\": [\\\\n             {\\\\n                 \\\\\\"href\\\\\\": \\\\\\"http://127.0.0.1:8774/v2/\\\\\\",\\\\n                 \\\\\\"rel\\\\\\": \\\\\\"self\\\\\\"\\\\n             }\\\\n         ]\\\\n     },\\\\n     {\\\\n         \\\\\\"status\\\\\\": \\\\\\"EXPERIMENTAL\\\\\\",\\\\n         \\\\\\"updated\\\\\\": \\\\\\"2013-07-23T11:33:21Z\\\\\\",\\\\n         \\\\\\"id\\\\\\": \\\\\\"v3.0\\\\\\",\\\\n         \\\\\\"links\\\\\\": [\\\\n             {\\\\n                 \\\\\\"href\\\\\\": \\\\\\"http://127.0.0.1:8774/v3/\\\\\\",\\\\n                 \\\\\\"rel\\\\\\": \\\\\\"self\\\\\\"\\\\n             }\\\\n         ]\\\\n     }\\\\n ]\\\\n}\\\\n\\"
                  }
                }
              }
            }
          }
        }
      }
    },
    \\"/v2\\": {
      \\"get\\": {
        \\"operationId\\": \\"getVersionDetailsv2\\",
        \\"summary\\": \\"Show API version details\\",
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"200 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"version\\": {
                      \\"type\\": \\"object\\",
                      \\"properties\\": {
                        \\"status\\": {
                          \\"oneOf\\": [
                            {
                              \\"type\\": \\"number\\"
                            },
                            {
                              \\"type\\": \\"string\\"
                            }
                          ]
                        },
                        \\"updated\\": {
                          \\"type\\": \\"string\\"
                        },
                        \\"media-types\\": {
                          \\"type\\": \\"array\\",
                          \\"items\\": {
                            \\"type\\": \\"object\\",
                            \\"properties\\": {
                              \\"base\\": {
                                \\"type\\": \\"string\\"
                              },
                              \\"type\\": {
                                \\"type\\": \\"string\\"
                              }
                            },
                            \\"required\\": [
                              \\"base\\",
                              \\"type\\"
                            ]
                          }
                        },
                        \\"id\\": {
                          \\"type\\": \\"string\\"
                        },
                        \\"links\\": {
                          \\"type\\": \\"array\\",
                          \\"items\\": {
                            \\"type\\": \\"object\\",
                            \\"properties\\": {
                              \\"href\\": {
                                \\"type\\": \\"string\\"
                              },
                              \\"rel\\": {
                                \\"type\\": \\"string\\"
                              },
                              \\"type\\": {
                                \\"type\\": \\"string\\"
                              }
                            },
                            \\"required\\": [
                              \\"href\\",
                              \\"rel\\"
                            ]
                          }
                        }
                      },
                      \\"required\\": [
                        \\"updated\\",
                        \\"media-types\\",
                        \\"id\\",
                        \\"links\\"
                      ]
                    }
                  }
                },
                \\"examples\\": {
                  \\"foo\\": {
                    \\"value\\": {
                      \\"version\\": {
                        \\"status\\": \\"CURRENT\\",
                        \\"updated\\": \\"2011-01-21T11:33:21Z\\",
                        \\"media-types\\": [
                          {
                            \\"base\\": \\"application/xml\\",
                            \\"type\\": \\"application/vnd.openstack.compute+xml;version=2\\"
                          },
                          {
                            \\"base\\": \\"application/json\\",
                            \\"type\\": \\"application/vnd.openstack.compute+json;version=2\\"
                          }
                        ],
                        \\"id\\": \\"v2.0\\",
                        \\"links\\": [
                          {
                            \\"href\\": \\"http://127.0.0.1:8774/v2/\\",
                            \\"rel\\": \\"self\\"
                          },
                          {
                            \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/os-compute-devguide-2.pdf\\",
                            \\"type\\": \\"application/pdf\\",
                            \\"rel\\": \\"describedby\\"
                          },
                          {
                            \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                            \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                            \\"rel\\": \\"describedby\\"
                          },
                          {
                            \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                            \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                            \\"rel\\": \\"describedby\\"
                          }
                        ]
                      }
                    }
                  }
                }
              }
            }
          },
          \\"203\\": {
            \\"description\\": \\"203 response\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"version\\": {
                      \\"type\\": \\"object\\",
                      \\"properties\\": {
                        \\"status\\": {
                          \\"type\\": \\"string\\"
                        },
                        \\"updated\\": {
                          \\"type\\": \\"string\\"
                        },
                        \\"media-types\\": {
                          \\"type\\": \\"array\\",
                          \\"items\\": {
                            \\"type\\": \\"object\\",
                            \\"properties\\": {
                              \\"base\\": {
                                \\"type\\": \\"string\\"
                              },
                              \\"type\\": {
                                \\"type\\": \\"string\\"
                              }
                            },
                            \\"required\\": [
                              \\"base\\",
                              \\"type\\"
                            ]
                          }
                        },
                        \\"id\\": {
                          \\"type\\": \\"string\\"
                        },
                        \\"links\\": {
                          \\"type\\": \\"array\\",
                          \\"items\\": {
                            \\"type\\": \\"object\\",
                            \\"properties\\": {
                              \\"href\\": {
                                \\"type\\": \\"string\\"
                              },
                              \\"rel\\": {
                                \\"type\\": \\"string\\"
                              },
                              \\"type\\": {
                                \\"type\\": \\"string\\"
                              }
                            },
                            \\"required\\": [
                              \\"href\\",
                              \\"rel\\"
                            ]
                          }
                        }
                      },
                      \\"required\\": [
                        \\"status\\",
                        \\"updated\\",
                        \\"media-types\\",
                        \\"id\\",
                        \\"links\\"
                      ]
                    }
                  },
                  \\"required\\": [
                    \\"version\\"
                  ]
                },
                \\"example\\": {
                  \\"version\\": {
                    \\"status\\": \\"CURRENT\\",
                    \\"updated\\": \\"2011-01-21T11:33:21Z\\",
                    \\"media-types\\": [
                      {
                        \\"base\\": \\"application/xml\\",
                        \\"type\\": \\"application/vnd.openstack.compute+xml;version=2\\"
                      },
                      {
                        \\"base\\": \\"application/json\\",
                        \\"type\\": \\"application/vnd.openstack.compute+json;version=2\\"
                      }
                    ],
                    \\"id\\": \\"v2.0\\",
                    \\"links\\": [
                      {
                        \\"href\\": \\"http://23.253.228.211:8774/v2/\\",
                        \\"rel\\": \\"self\\"
                      },
                      {
                        \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/os-compute-devguide-2.pdf\\",
                        \\"type\\": \\"application/pdf\\",
                        \\"rel\\": \\"describedby\\"
                      },
                      {
                        \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                        \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                        \\"rel\\": \\"describedby\\"
                      }
                    ]
                  }
                },
                \\"examples\\": {
                  \\"foo\\": {
                    \\"value\\": {
                      \\"version\\": {
                        \\"status\\": \\"CURRENT\\",
                        \\"updated\\": \\"2011-01-21T11:33:21Z\\",
                        \\"media-types\\": [
                          {
                            \\"base\\": \\"application/xml\\",
                            \\"type\\": \\"application/vnd.openstack.compute+xml;version=2\\"
                          },
                          {
                            \\"base\\": \\"application/json\\",
                            \\"type\\": \\"application/vnd.openstack.compute+json;version=2\\"
                          }
                        ],
                        \\"id\\": \\"v2.0\\",
                        \\"links\\": [
                          {
                            \\"href\\": \\"http://23.253.228.211:8774/v2/\\",
                            \\"rel\\": \\"self\\"
                          },
                          {
                            \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/os-compute-devguide-2.pdf\\",
                            \\"type\\": \\"application/pdf\\",
                            \\"rel\\": \\"describedby\\"
                          },
                          {
                            \\"href\\": \\"http://docs.openstack.org/api/openstack-compute/2/wadl/os-compute-2.wadl\\",
                            \\"type\\": \\"application/vnd.sun.wadl+xml\\",
                            \\"rel\\": \\"describedby\\"
                          }
                        ]
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}",
]
`;

exports[`update command can generate update spec files for request / response examples with partial schemas 2`] = `
Object {
  "examplesCount": 5,
  "externalExamplesCount": 0,
  "filesWithOverwrittenYamlComments": Set {},
  "patchesCount": 54,
  "updatedFilesCount": 1,
}
`;

exports[`update command update by interactions generate patches for multiple interactions for the same operations 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          }
        },
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"id\\": {
                    \\"type\\": \\"string\\"
                  },
                  \\"optionalField\\": {
                    \\"type\\": \\"number\\"
                  }
                },
                \\"required\\": [
                  \\"id\\"
                ]
              }
            }
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;

exports[`update command update by interactions generates patches for response bodies 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"responses\\": {
          \\"201\\": {
            \\"description\\": \\"automatically documented through Optic\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"optionalField\\": {
                      \\"type\\": \\"number\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\"
                  ]
                }
              }
            }
          },
          \\"400\\": {
            \\"description\\": \\"automatically documented through Optic\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"error\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"error\\"
                  ]
                }
              }
            }
          }
        }
      },
      \\"delete\\": {
        \\"responses\\": {
          \\"204\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;

exports[`update command update by interactions generates patches to extend existing request or response bodies 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"id\\": {
                    \\"type\\": \\"string\\"
                  },
                  \\"newField\\": {
                    \\"type\\": \\"number\\"
                  },
                  \\"optionalBoolean\\": {
                    \\"type\\": \\"boolean\\"
                  }
                },
                \\"required\\": [
                  \\"id\\",
                  \\"newField\\"
                ]
              }
            }
          }
        },
        \\"responses\\": {
          \\"201\\": {
            \\"description\\": \\"created resource\\",
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"id\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"newField\\": {
                      \\"type\\": \\"number\\"
                    },
                    \\"optionalBoolean\\": {
                      \\"type\\": \\"boolean\\"
                    }
                  },
                  \\"required\\": [
                    \\"id\\",
                    \\"newField\\",
                    \\"optionalBoolean\\"
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;

exports[`update command update by interactions generates updated spec files for new request bodies 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          }
        },
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"type\\": \\"object\\",
                \\"properties\\": {
                  \\"id\\": {
                    \\"type\\": \\"string\\"
                  }
                },
                \\"required\\": [
                  \\"id\\"
                ]
              }
            }
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;

exports[`update command update by interactions ignores interactions for undocumented operations 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"responses\\": {
          \\"200\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;

exports[`update command update by interactions only generates patches for 2xx, 3xx and 4xx responses 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"responses\\": {
          \\"201\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          },
          \\"302\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          },
          \\"400\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;

exports[`update command update by interactions only generates patches for request bodies with 2xx and 3xx responses 1`] = `
Array [
  Object {
    "contents": "{
  \\"openapi\\": \\"3.0.1\\",
  \\"paths\\": {
    \\"/examples/{exampleId}\\": {
      \\"post\\": {
        \\"responses\\": {
          \\"400\\": {
            \\"description\\": \\"automatically documented through Optic\\"
          }
        }
      }
    }
  },
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"Empty\\"
  }
}",
    "path": "/tmp/test-openapi.json",
  },
]
`;
